AnaJV/OscarR - Refactor using ParkingLot properties
(cherry picked from commit c9ea63cd998f66cc05377b0192e22292733f3f66)